Move PAT Token from appsettings to Web app config

--- a/src/AutoStateTransitions/appsettings.json
+++ b/src/AutoStateTransitions/appsettings.json
@@ -6,7 +6,7 @@
   },
   "AllowedHosts": "*",
   "AppSettings": {
-    "PersonalAccessToken": "vn2b6kgtv5aisfywyfuuiofbx4fbt6spwroilxvzwteippnhypka",
+    "PersonalAccessToken": "",
     "Organization": "",
     "SourceForRules": "https://raw.githubusercontent.com/microsoft/azure-boards-automate-state-transitions/master/src/AutoStateTransitions/Rules"
   }
